working on mobile nav, now correct position

--- a/main.scss
+++ b/main.scss
@@ -422,11 +422,12 @@ footer{
 
     header{
         position: fixed;
-        top: 10%;
+        top: 0%;
         left:0; 
         width: 100%;
         height: 11vh;
-        margin: 0px auto;
+        margin: 5px auto;
+        padding: 0 5px;
         
             
         
